Capstone.Web/Content/StyleSheet.css
@font-face {
    font-family: 'frankfurter';
    src: url('fonts/frankfurter.ttf') format('truetype');
}

body {
    background-color: #e2b991;
    font-family: frankfurter;
    background-image: linear-gradient(to bottom, rgba(255,255,255,.5) 0%, rgba(255,255,255,.5)100%), url('images/adjusted_background.jpg');
}

.formdiv {
    width: 50%;
}

.formcontainer {
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
    padding: 2%;
}

h2 {
    padding: 1%;
}

header {
    display: flex;
    justify-content: center;
    padding: 1%;
    background-color: #77b940;
}

    header img {
        width: 15%;
        height: 15%;
    }

#navbar {
    background-color: #fcae16;
    font-family: frankfurter;
}

    #navbar a {
        color: white;
    }

.field-validation-error {
    color: red;
}

.navbar-header, .container-fluid {
    background-color: #fcae16;
}

.navbar-toggle {
    background-color: lightgray;
}

#navbarusername {
    padding-top: 15px;
    padding-bottom: 15px;
    color: white;
    font-style: italic;
    position: relative;
    right: 10px;
}

#homebutton {
    color: white;
}

.error {
    color: red;
}

footer {
    position: fixed;
    bottom: 0;
}

button {
    border-radius: 15px;
}

#carrotdiv {
    display: inline-block;
    width: 40%;
    float: left;
    margin-top: 30px;
    margin-bottom: 30px;
}

#hourglassdiv {
    margin-top: 30px;
    margin-bottom: 30px;
    display: inline-block;
    width: 40%;
    float: right;
}

#headertext, #headerseconds {
    display: inline-block;
    width: 70%;
    padding-top: 30px;
    padding-bottom: 30px;
    text-align: left;
    padding-left: 2%;
    color: white;
}


#headerimg {
    padding-left: 10px;
    display: inline-block;
    width: 15%;
}

#logo {
    width: 17%;
    margin-top: 30px;
    margin-bottom: 6px;
    text-align: center;
    display: inline-block;
}

#headerdiv {
    width: 100%;
    height: 100%;
    text-align: center;
}
/*Child Dashboard - takes from layeringsheet as well*/

.childDashboard {
    width: 100%;
    float: initial;
    padding-left: 37%;
}

/*Parent Dashboard Child Profiles*/

body {
    text-align: center;
    margin: auto;
}

.childinformation {
    color: #73583f;
    padding: 2%;
    border: 7px solid;
    margin: 2.5%;
    background-color: antiquewhite;
    display: flex;
}

#usernameMascot {
    display: flex;
    justify-content: center;
}

#mascot {
    width: 150%;
}

.mascotDiv {
    position: relative;
    right: 22%;
    width: 15%;
}

#dashboard_childInfo {
    position: relative;
    font-size: large;
    right: 10%;
    top: 2%;
}

#activitybutton {
    padding: 6%;
    margin: 8%;
    background-color: #77b940;
    height: 75px;
}

    #activitybutton a {
        color: white;
    }

#activityhistorybutton {
    padding: 6%;
    margin: 8%;
    background-color: #77b940;
    height: 75px;
}

    #activityhistorybutton a {
        color: white;
    }

.mascotDivButton {
    width: 15%;
    display: inline-block;
    margin: 0.5% 2% 2% 2%;
}

#mascotButton {
    margin: 2% 0 2% 0;
}

.closetWholeDiv {
    border: solid #85a04f;
    background-color: #f4e3ad;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    border-radius: 2%;
    margin-top: 25%;
}

#closetItemDiv {
    margin: 2%;
    width: 20%;
    display: inline-block;
}

.closetImg {
    width: 40%;
    display: inline-block;
}

#closetButton {
    margin-Bottom: 2%;
}

.storehatdiv {
    border: solid #85a04f;
    background-color: #f4e3ad;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    border-radius: 2%;
}

.storeitemdiv {
    border: solid #f4bd0c;
    background-color: #d3e8ab;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    border-radius: 2%;
}

#storeitemdiv {
    margin: 2%;
    width: 20%;
    display: inline-block;
}

#activityhistorytable {
    background: white;
    margin-left: auto;
    margin-right: auto;
    border: 7px solid #73583f;
}

    #activityhistorytable tr td {
        border: 1px solid black;
        width: 150px;
    }

    #activityhistorytable tr:nth-child(even) {
        background-color: #f2f2f2;
    }
/* Store View Styling */

.storehatdiv h3 {
    padding-top: 3%;
    margin: 3%;
    justify-content: center;
}



.storeitemdiv h3 {
    margin: 3%;
    justify-content: center;
}

.storehatimg {
    width: 40%;
    display: inline-block;
}

.storeprice {
    display: block;
    width: 30px;
    margin-left: auto;
    margin-right: auto;
}

/*Radio Button*/
label > input { /* HIDE RADIO */
    visibility: hidden; /* Makes input not-clickable */
    position: absolute; /* Remove input from document flow */
}

    label > input + img { /* IMAGE STYLES */
        cursor: pointer;
        border: 2px solid transparent;
    }

    label > input:checked + img { /* (RADIO CHECKED) IMAGE STYLES */
        border: 2px solid #77b940;
    }
/*Choose Mascot Styling*/
.chooseMascotDiv {
    display: inline-block;
    width: 25%;
    width: 15%;
    Margin: 7%;

}
#mascotButton{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

